re PR middle-end/56417 (internal compiler error: verify_gimple failed)

PR sanitizer/56417
	* asan.c (instrument_strlen_call): Fix typo in comment.
	Use char * type even for the lhs of POINTER_PLUS_EXPR.

	* gcc.dg/asan/pr56417.c: New test.

From-SVN: r201696